style: adiciona index.scss

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,8 @@
+@import "./styles/_variables.scss";
+
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family : $font-family-body;
   line-height: 1.5;
   font-weight: 400;
 
@@ -12,6 +15,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
 
 a {
   font-weight: 500;
