--- a/src/components/Product/product.module.scss
+++ b/src/components/Product/product.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .productList {
-  background-color: $rose-50;
+  background-color: $rose-100;
 
   .productTitle {
     font-size: 3rem;
@@ -35,7 +35,7 @@
       span {
         font-size: 1.2rem;
         font-weight: $font-weight-bold;
-        color: $red;
+        
       }
       
     }
@@ -45,12 +45,17 @@
 .quantityControls {
   display: flex;
   align-items: center;
+  border: 1px solid $red;
+  background: $red;
+  border-radius: 20px;
+  padding:5px;
 
   button {
-    background-color: #fff;
-    color: $red;
-    border: 1px solid $red;
-   
+    
+    background:  $red;
+    border:1px solid #fff;
+    border-radius:50%;
+    padding: 5px;
     font-size: 1rem;
     cursor: pointer;
     margin: 0 5px;
@@ -63,6 +68,14 @@
     text-align: center;
     min-width: 30px; 
     display: inline-block; 
+    color:#fff;
+  }
+
+  .decrementButton, .incrementButton {
+    color: #fff;
+    background-color: $red;
+    border:1px solid #fff;
+    border-radius:50%;
   }
 }
 
@@ -73,11 +86,12 @@
   transform: translateX(-50%);
   background-color: white;
   color: $red; 
-  
+  border-radius:12px !important;
   cursor: pointer;
   font-size: 1rem;
   border: 1px solid $red; 
   width:150px;
+  padding:5px;
 }
 
 .addToCartButton:hover {
@@ -105,12 +119,13 @@
     flex-shrink: 0; 
   }
 
-  span {
+  .productQuantity {
     font-size: 1.2rem;
     margin: 0 10px;
     text-align: center;
     min-width: 30px; 
     display: inline-block; 
+    color: #fff;
   }
 }
 
