--- a/src/components/CartWidget/cart-widget.module.scss
+++ b/src/components/CartWidget/cart-widget.module.scss
@@ -77,6 +77,7 @@
 
   .cartItemQuantity {
     color: $red;
+    font-weight: $font-weight-semibold;
   }
 
   .cartItemPriceUnit {
@@ -86,18 +87,30 @@
   .cartItemTotal {
     color: $rose-500;
     font-weight: $font-weight-bold;
+  
   } 
   
   .cartItemQuantity, .cartItemPriceUnit, .cartItemTotal {
-    margin-bottom: 0.25rem; /* Adiciona espaçamento entre os valores */
+    margin-bottom: 0.25rem; 
     
   }
   
   .cartTotal {
     margin-top: 1rem;
     font-size: 1.2rem;
-    font-weight: bold;
+    font-weight: $font-weight-bold;
     text-align: right;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .removeButton {
+    color: #fff;
+    background-color: transparent;
+    border:1px solid $rose-500;
+    border-radius:50%;
+    padding: 0 5px;
+
   }
 
 }
