style: start responsiviness

--- a/src/components/CartWidget/cart-widget.module.scss
+++ b/src/components/CartWidget/cart-widget.module.scss
@@ -94,6 +94,10 @@
     margin-bottom: 0.25rem; 
     
   }
+
+  .cartItemPriceUnit {
+    color: $rose-500;
+  }
   
   .cartTotal {
     margin-top: 1rem;
