style: add carbon-free div

--- a/src/components/CartWidget/cart-widget.module.scss
+++ b/src/components/CartWidget/cart-widget.module.scss
@@ -117,4 +117,14 @@
 
   }
 
+  .carbonFree {
+    color: $rose-900;
+    background: $rose-100;
+    padding: 15px 10px;
+    display: flex;  
+    align-items: center;
+    justify-content: center;
+    gap:10px;
+  }
+
 }
