--- a/src/components/Product/product.module.scss
+++ b/src/components/Product/product.module.scss
@@ -19,7 +19,7 @@
       .productImage {
         max-width: 100%;
         height: auto;
-        border-radius: 5px;
+        border-radius: 8px;
         transition: border 0.3s ease; // Transição suave para a borda
       }
 
@@ -59,6 +59,8 @@
   border-radius: 20px;
   padding:5px;
 
+
+
   button {
     
     background:  $red;
@@ -94,13 +96,13 @@
   left: 50%; 
   transform: translateX(-50%);
   background-color: white;
-  color: $red; 
+  color: #000 !important;
   border-radius:12px !important;
   cursor: pointer;
   font-size: 1rem;
   border: 1px solid $red; 
   width:150px;
-  padding:5px;
+  padding: 10px;
   display: flex;
     align-items: center;
     justify-content: center;
@@ -120,7 +122,7 @@
 
 .addToCartButton:hover {
   background: $red; 
-  color: #fff; 
+  color: #fff !important; 
   transition: fill 0.3s ease;
 }
 
@@ -130,7 +132,7 @@
   display: flex;
   align-items: center;
   position: absolute; 
-  bottom: 40%;
+  bottom: 34%;
   left: 50%; 
   transform: translateX(-50%); 
 
