--- a/src/components/CartWidget/cart-widget.module.scss
+++ b/src/components/CartWidget/cart-widget.module.scss
@@ -127,4 +127,16 @@
     gap:10px;
   }
 
+  .emptyCart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    color: $rose-500;
+    font-size: 1rem;
+    font-weight: $font-weight-semibold;
+    padding: 2rem;
+  }
+
 }
