--- a/src/components/CartWidget/cart-widget.module.scss
+++ b/src/components/CartWidget/cart-widget.module.scss
@@ -139,4 +139,17 @@
     padding: 2rem;
   }
 
+  .confirmOrderButton {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color:$red;
+    cursor: pointer;
+    transition: border-color 0.25s;
+    width: 100%;
+  }
+
 }
